[gd_scene load_steps=14 format=3 uid="uid://b3dk3ja2yq7u3"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_ndm3o"]
[ext_resource type="PackedScene" uid="uid://4llbeqvxmkph" path="res://scenes/hud.tscn" id="2_n6eh5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lu5c3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_th864"]
albedo_color = Color(0.2, 0.866667, 0, 1)
roughness = 0.36

[sub_resource type="CapsuleMesh" id="CapsuleMesh_kx678"]
material = SubResource("StandardMaterial3D_th864")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k5igd"]
radius = 0.4
height = 1.8

[sub_resource type="BoxMesh" id="BoxMesh_0ntqj"]
size = Vector3(1, 1.3, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_dcxb4"]
points = PackedVector3Array(-0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5)

[sub_resource type="Animation" id="Animation_d38bc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D/Right_Arm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D/Right_Arm/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.28695, 0.335323, -0.0587942)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D/Right_Arm/Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.567922, -0.276739, -0.428297)]
}

[sub_resource type="Animation" id="Animation_ubxbd"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D/Right_Arm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 2.40574, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D/Right_Arm/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.04751, -0.227541, -0.574961)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D/Right_Arm/Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.567922, -0.276739, -0.428297)]
}

[sub_resource type="Animation" id="Animation_k08vk"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D/Right_Arm:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D/Right_Arm/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-0.28695, 0.335323, -0.0587942), Vector3(-0.28695, 0.544012, -0.0587942)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D/Right_Arm/Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.567922, -0.276739, -0.428297), Vector3(0.567922, -0.333577, -0.428297)]
}

[sub_resource type="Animation" id="Animation_pmpcu"]
resource_name = "block"
length = 0.3333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D/Right_Arm/Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.567922, -0.276739, -0.428297), Vector3(0.482541, -0.276739, -0.428297), Vector3(0.308354, -0.191545, -0.428297), Vector3(0.40082, -0.191545, -0.576895), Vector3(0.40082, -0.191545, -0.576895)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D/Right_Arm/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.28695, 0.335323, -0.0587942), Vector3(-0.278295, 0.224927, 0.452524), Vector3(-0.0988559, -0.0275455, 1.34656), Vector3(-0.0988559, -0.210718, 1.34656), Vector3(-0.0988559, -0.210718, 1.34656)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_in0ph"]
_data = {
"RESET": SubResource("Animation_d38bc"),
"attack": SubResource("Animation_ubxbd"),
"idle": SubResource("Animation_k08vk"),
"parry": SubResource("Animation_pmpcu")
}

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER") groups=["Player"]]
script = ExtResource("1_ndm3o")
CAMERA_CONTROLLER = NodePath("CameraController/Camera3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_lu5c3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_kx678")
skeleton = NodePath("../..")

[node name="PlayerHitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08649, 0)
shape = SubResource("CapsuleShape3D_k5igd")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/Camera3D"]
update_mode = 1

[node name="Right_Arm" type="Node3D" parent="CameraController/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3)

[node name="Weapon" type="MeshInstance3D" parent="CameraController/Camera3D/Right_Arm"]
transform = Transform3D(0.0948145, -0.0374887, 0.0315619, -0.00563577, 0.957454, 0.0283029, -0.0312801, -0.286139, 0.0905694, 0.567922, -0.276739, -0.428297)
mesh = SubResource("BoxMesh_0ntqj")

[node name="Hitbox" type="Area3D" parent="CameraController/Camera3D/Right_Arm/Weapon"]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="CameraController/Camera3D/Right_Arm/Weapon/Hitbox"]
transform = Transform3D(1.3, -4.84285e-09, 3.8743e-08, 4.84288e-09, 1.3, -9.29833e-07, -3.8743e-08, 9.29833e-07, 1.3, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_dcxb4")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_in0ph")
}
autoplay = "idle"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="HUD" parent="." instance=ExtResource("2_n6eh5")]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
